--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,22 @@
   color: orange;
 }
 
-.photo {
-  width: 200px;
-  height: 200px;
-  border-radius: 100%;
-}
-
-
 .profile {
   width: 300px;
   text-align: center;
   padding: 1rem;
   background-color: #ebebeb;
   border-radius: 20px;
+  box-shadow: 7px 5px 23px -9px rgba(0, 0, 0, 0.75);
   margin-bottom: 1rem;
-  box-shadow: 14px 13px 5px -6px rgba(0,0,0,0.24);
-  -webkit-box-shadow: 14px 13px 5px -6px rgba(0,0,0,0.24);
-  -moz-box-shadow: 14px 13px 5px -6px rgba(0,0,0,0.24);
+  -webkit-box-shadow: 7px 5px 23px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 7px 5px 23px -9px rgba(0, 0, 0, 0.75);
+}
+
+.photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
 }
 
 .avatar {
@@ -35,13 +34,21 @@
   background-color: aquamarine;
   padding: 0.2rem 0.5rem;
   border-radius: 0.5rem;
-  font-weight: bold;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 .container {
-  display: flex;
-  justify-content: center;
+  width: 500px;
+  margin: auto;
+}
+
+.banner {
+  text-align: center;
+  margin-top: 5rem;
+  font-size: 2rem;
+  background-color: gold;
+  font-weight: bold;
 }
 
 .counter {
@@ -67,6 +74,15 @@
   padding: 0.2rem 1rem;
   border-radius: 0.5rem;
   cursor: pointer;
-  background-color: rgb(215, 127, 12);
-  background: linear-gradient(90deg, rgba(215, 127, 12, 1) 0%, rgb(253, 220, 29, 1) 100%);
+  background: rgb(215, 127, 12);
+  background: linear-gradient(
+    90deg,
+    rgba(215, 127, 12, 1) 0%,
+    rgba(253, 220, 29, 1) 100%
+  );
+}
+
+.total {
+  font-size: 1rem;
+  margin-left: -1.5rem;
 }
